--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html,
-body, {
-	width: calc(100%+256px);
+body {
+	width: 100%;
 	height: 100%;
 	margin: 0;
 }
@@ -8,48 +8,34 @@ body, {
 body {
 	display: grid;
 	grid-template-rows: 64px 1fr;
+}
+
+div#aside-content {
+	display: grid;
 	grid-template-columns: 256px 256px 1fr;
 	margin-left: -256px;
 	transition: margin-left 1s;
+	overflow-y: hidden;
 }
 
-body.navigation-show {
+div#aside-content.navigation-show {
 	grid-template-columns: 256px 0px 1fr;
 	margin-left: 0px;
 	transition: margin-left 1s;
 }
 
-header {
-	grid-row: 1 / 2;
-	grid-column: 2 / -1;
-}
-
 .navigation {
-	grid-row: 2 / -1;
 	grid-column: 1 / 2;
 }
 .content {
-	grid-row: 2 / -1;
 	grid-column: 2 / -1;
 }
 
 @media (min-width:768px) {
-	body {
+	div#aside-content {
 		grid-template-columns: 256px 0px 1fr;
 		margin-left: 0px;
 	}
-
-	header {
-		grid-column: 1 / -1;
-	}
-}
-
-header#main-header.navigation-show {
-	grid-column: 1 / -1;
-}
-nav.navigation-show {
-}
-section.navigation-show {
 }
 
 header {
