--- a/css/style.css
+++ b/css/style.css
@@ -49,21 +49,77 @@ div#aside-content.navigation-show .content > * {
 	pointer-events: none;
 }
 
-/* common styles */
+/* common logic styles */
 header {
-	background-color: #ffbb00;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	padding: 10px;
 }
+
+header a.header-menu {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.searcher-header {
+	height: 100%;
+	width: 35%;
+	padding-left: 35px;
+}
+
+.content {
+	display: grid;
+	padding: 25px;
+	grid-template-rows: 46px repeat(auto-fill,minmax(120px,1fr)) ;
+	grid-template-columns: repeat(auto-fill,minmax(240px,1fr)) ;
+}
+
+.searcher-content {
+	grid-row: 1 / 2;
+	grid-column: 1 / -1;
+	padding: 5px;
+}
+
+.content-notes {
+	padding: 10px;
+}
+
+.navigation {
+	display: flex;
+	flex-direction: column;
+}
+
+.navigation-items {
+	display: flex;
+	align-items: center;
+	box-sizing: border-box;
+	width: 100%;
+	height: 48px;
+	padding-left: 20px;
+}
+
+.content, .navigation {
+	overflow-y: auto;
+}
+
+.navigation-items + .navigation-items {
+	margin-top: 1rem;
+}
+
+.navigation-items > p {
+	padding: 15px 0 15px 20px;
+}
+
+/* common beauty styles */
+header {
+	background-color: #ffbb00;
+}
 header a.header-menu {
 	border-radius: 50%;
 	width: 36px;
 	height: 36px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	text-decoration: none;
 }
 header a.header-menu:hover {
@@ -79,40 +135,30 @@ header a.header-menu:hover {
 	font-weight: bolder;
 }
 
-.searcher-header{
+.searcher-header {
 	border: none;
 	background-color: rgba(136, 132, 132, 0.178);
-	height: 100%;
-	width: 35%;
 	border-radius: 3px;
-	padding-left: 35px;
 }
-.searcher-header:focus{
+.searcher-header:focus {
 	background-color: white;
 	outline: none;
 }
 
 .content {
-	display: grid;
-	padding: 25px;
-	grid-template-rows: 46px repeat(auto-fill,minmax(120px,1fr)) ;
-	grid-template-columns: repeat(auto-fill,minmax(240px,1fr)) ;
 	grid-gap: 10px 20px;
 }
+
 .searcher-content {
-	grid-row: 1 / 2;
-	grid-column: 1 / -1;
 	border: none;
 	box-shadow: 0.2px 1px 5px gray;
 	outline: none;
-	padding: 5px;
 }
 .content-notes {
-	padding: 10px;
 	background-color: white;
 	box-shadow: 2px 2px 5px gray;
 }
-.content-notes>p {
+.content-notes > p {
 	font-family: 'Patrick Hand', cursive;
 	font-size: 21px;
 	font-weight: 500px;
@@ -120,25 +166,10 @@ header a.header-menu:hover {
 
 .content, .navigation {
 	background-color: #e8e8e8;
-	overflow-y: auto;
-}
-
-.navigation {
-	display: flex;
-	flex-direction: column;
 }
 
 .navigation-items {
-	display: flex;
-	align-items: center;
 	text-decoration: none;
-	box-sizing: border-box;
-	width: 100%;
-	height: 48px;
-	padding-left: 20px;
-}
-.navigation-items + .navigation-items{
-	margin-top: 1rem;
 }
 .navigation-items:hover {
 	background-color: rgba(177, 174, 174, 0.596);
@@ -147,7 +178,6 @@ header a.header-menu:hover {
 	border-bottom: 0.5px solid #cec9c9;
 }
 .navigation-items > p {
-	padding: 15px 0 15px 20px;
 	color: black;
 	font-family:Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
 	font-size: 15px;
