--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 
 /* main layout */
 body,
-div#aside-content,
+main,
 .content {
 	display: grid;
 }
@@ -16,7 +16,7 @@ body {
 	grid-template-rows: 64px 1fr;
 }
 
-div#aside-content {
+main {
 	grid-template-columns: 256px 256px 1fr;
 }
 
@@ -43,34 +43,35 @@ div#aside-content {
 
 /* animated aside */
 
-div#aside-content {
+main {
 	margin-left: -256px;
 	transition: margin-left 1s;
 }
 
-div#aside-content.navigation-show {
+main.navigation-show {
 	grid-template-columns: 256px 0px 1fr;
 	margin-left: 0px;
 }
 
 @media (min-width:768px) {
-	div#aside-content {
+	main {
 		grid-template-columns: 256px 0px 1fr;
 		margin-left: 0px;
 	}
 }
 
 /* hide content when menu is presed */
-div#aside-content .content {
+main .content {
 	transition: opacity 1s, filter 1s;
 }
 
-div#aside-content.navigation-show .content {
+main.navigation-show .content {
+	overflow-y: hidden;
 	opacity: 0.5;
 	filter: blur(1px);
 }
 
-div#aside-content.navigation-show .content > * {
+main.navigation-show .content > * {
 	pointer-events: none;
 }
 
@@ -100,7 +101,7 @@ input.searcher-header {
 	padding-left: 35px;
 }
 
-div#aside-content {
+main {
 	overflow-y: hidden;
 	background-color: black;
 }
