--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,8 @@ main.navigation-show .content > * {
 header,
 a.icon,
 .navigation,
-.navigation-items {
+.navigation-items,
+.searcher-content {
 	display: flex;
 	align-items: center;
 }
@@ -130,6 +131,13 @@ main {
 	padding: 15px 0 15px 20px;
 }
 
+.searcher-content {
+	align-items: stretch;
+}
+.searcher-content > input {
+	flex-grow: 1;
+}
+
 /* common beauty styles */
 header {
 	background-color: #ffbb00;
@@ -140,18 +148,18 @@ header > * {
 	margin-right: 5px;
 }
 
-header .icon-circle {
+a.icon-circle {
 	border-radius: 50%;
 }
 
-header .icon {
+a.icon {
 	color: black;
 	width: 32px;
 	height: 32px;
 	text-decoration: none;
 }
 
-header .icon:hover {
+header a.icon:hover {
 	background-color: #daa104;
 }
 
@@ -179,8 +187,13 @@ header .icon:hover {
 }
 
 .searcher-content {
-	border: none;
 	box-shadow: 0.2px 1px 5px gray;
+	background-color: white;
+	padding-left: 25px;
+}
+
+.searcher-content > input {
+	border: none;
 	outline: none;
 }
 .content-notes {
