--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,16 @@ main {
 .content {
 	grid-column: 2 / -1;
 	padding: 25px;
-	grid-template-rows: 46px repeat(auto-fill,minmax(120px,1fr)) ;
-	grid-template-columns: repeat(auto-fill,minmax(240px,1fr)) ;
+	grid-auto-rows: min-content;
+	grid-template-columns: repeat(auto-fill,minmax(240px,1fr));
+	grid-gap: 20px;
+	align-items: flex-start;
 }
 
 .searcher-content {
-	grid-row: 1 / 2;
 	grid-column: 1 / -1;
 	padding: 5px;
+	height: 46px;
 }
 
 .content-notes {
@@ -80,7 +82,8 @@ header,
 a.icon,
 .navigation,
 .navigation-items,
-.searcher-content {
+.searcher-content,
+.content-notes {
 	display: flex;
 	align-items: center;
 }
@@ -182,25 +185,25 @@ header a.icon:hover {
 	outline: none;
 }
 
-.content {
-	grid-gap: 10px 20px;
-}
-
 .searcher-content {
 	box-shadow: 0.2px 1px 5px gray;
 	background-color: white;
-	padding-left: 25px;
 }
 
 .searcher-content > input {
 	border: none;
 	outline: none;
+	padding-left: 25px;
+	padding-right: 25px;
 }
 .content-notes {
 	background-color: white;
 	box-shadow: 2px 2px 5px gray;
 }
+
 .content-notes > p {
+	max-width: 100%;
+	word-wrap: break-word;
 	font-family: 'Patrick Hand', cursive;
 	font-size: 21px;
 	font-weight: 500px;
