--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ header .title {
 	}
 }
 
-input.search-note {
+input.search-notes {
 	flex-grow: 1;
 	flex-basis: 100px;
 	height: 100%;
@@ -211,12 +211,12 @@ header .title span {
 	font-weight: bolder;
 }
 
-.search-note {
+.search-notes {
 	border: none;
 	background-color: rgba(136, 132, 132, 0.178);
 	border-radius: 3px;
 }
-.search-note:focus {
+.search-notes:focus {
 	background-color: white;
 	outline: none;
 }
