--- a/css/style.css
+++ b/css/style.css
@@ -181,8 +181,17 @@ article.note {
 	overflow: hidden;
 }
 
+article.note > input,
 article.note > .note-remove-container {
 	position: absolute;
+}
+
+article.note > input {
+	top: 0;
+	left: 0;
+}
+
+article.note > .note-remove-container {
 	top: -40px;
 	right: 0;
 	transition: all .5s ease-in-out;
