feat: add modal update note (html/css only)

--- a/css/beauty.css
+++ b/css/beauty.css
@@ -90,3 +90,11 @@ article.note button {
 .highlight {
 	text-decoration: underline;
 }
+
+button {
+	cursor: pointer;
+}
+
+button:disabled {
+	cursor: auto;
+}
